
  * data/common/dbg-pkg:
    + [CL] Identify both python-foo-dbg and python3-foo-dbg as known debug
      packages to avoid a false-positive for the former when checking for
      debian-control-has-obsolete-dbg-package.  (Closes: #886271)
  * data/files/fnames:
    + [CL] Warn about packages that ship (non-reproducible) Python
      Hypothesis examples.  (Closes: #886101)

  * reporting/templates/maintainer.tmpl:
    + [CL] Make the previously-hidden package anchor links visible so that
      one can right-click and copy the URL instead of constructing it
      manually.

  * t/tests/files-multiarch-foreign-files:
    + [CL] Ensure that we install to a multiarch directory on all
      architectures to prevent a FTBFS on, for example, i386.
      (Closes: #886163)

 -- Chris Lamb <lamby@debian.org>  Mon, 01 Jan 2018 15:41:06 +0000

lintian (2.5.67) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - debian-rules-should-not-use-DH_EXTRA_ADDONS
      - debian-watch-could-verify-download
      - invalid-date-in-debian-changelog
      - override_dh_fixperms-does-not-call-dh_fixperms

  * checks/apache2.{desc,pm}:
    + [CL] Include the offending filename and line number in the output of
      apache2-deprecated-auth-config and apache2-unparsable-dependency.
    + [CL] Avoid false positives in apache2-deprecated-auth-config where
      the offending lines are wrapped in suitable "IfModule" or "IfVersion"
      directives.  (Closes: #788991, #710656)
  * checks/changelog-file.{desc,pm}:
    + [CL] Warn about changelog entries that have incorrectly formatted
      dates.  (Closes: #793406)
  * checks/files.pm:
    + [CL] Split out python-module-has-overly-generic-name regular
      expression into a data file.
    + [CL] Don't warn about extra license files installed via Sphinx.
      Thanks, Stuart Prescott!  (Closes: #885968)
  * checks/python.pm:
    + [CL] Prevent false positives when checking for Python {2,3} packages