@@ -43,6 +43,10 @@ lintian (2.5.68) UNRELEASED; urgency=medium
   * data/files/fnames:
     + [CL] Warn about packages that ship (non-reproducible) Python
       Hypothesis examples.  (Closes: #886101)
+  * data/standards-version/ancient-date:
+    + [CL] Change the policy of "ancient-standards-version" to "a release
+      of Policy from the previous stable release cycle" and update the
+      value to match.  (Closes: #886219)
 
   * reporting/templates/maintainer.tmpl:
     + [CL] Make the previously-hidden package anchor links visible so that
